// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #7 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// comment
=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #8 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* comment */
=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #9 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #10 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #11 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #12 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #13 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// comment
;
=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #14 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* comment */
;
=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #15 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
;
// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #16 format[babel]} 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

;/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;
